[package]
name = "irmaseal-js"
version = "0.1.0"
authors = ["Bas Westerbaan <bas@westerbaan.name>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.67"
irmaseal-core = "0.1.3"
js-sys = "0.3.39"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
serde_json = "1.0.56"

# TODO Temporarily force ibe 0.1.4 to get quicker parameter deserialization,
#      until irmaseal-core bumps the version of ibe it uses.
ibe = "0.1.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[profile.release]
lto = true
opt-level = "s"
